--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,8 @@
+html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: black;
     font-family: Helvetica, sans-serif;
@@ -5,6 +10,8 @@ body {
     color: seashell;
     text-align: center;
     opacity: 0.9;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -56,6 +63,7 @@ h2, h3, h4 {
 
 content {
     display: flex;
+    flex-direction: column;
     width: 1200px;
     margin: auto;
     padding-top: 69px;
