--- a/resources/style.css
+++ b/resources/style.css
@@ -52,6 +52,10 @@ a {
     color: seashell;
 }
 
+p {
+    margin-top: 0px;
+}
+
 div {
     display: block;
 }
@@ -64,6 +68,7 @@ h2, h3, h4 {
 content {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     width: 1200px;
     margin: auto;
     padding-top: 69px;
@@ -80,30 +85,35 @@ content {
     flex-direction: column;
     padding-top: 70px;
     height: 700px;
-    width: 100%;
+    width: 1200px;
     background-image: url('../resources/img-mission-background.jpg');
 }
 
-.mission .txt {
+.txt {
     margin: auto;
     background-color: black;
     width: 100%;
 }
 
 .featured {
+    margin: auto;
     width: 1000px;
+    height: 700px;
+    padding-top: 70px;
 }
 
-.featured.card {
-    width: 300px;
+.item {
+    padding: 5px;
 }
 
-.featured.img {
+.item img {
     height: 200px;
     width: 300px;
+    margin: 10px;
 }
 
 .locations {
+    padding-top: 70px;
     height: 500px;
     width: 1200px;
     background-image: url('../resources/img-locations-background.jpg');
@@ -115,8 +125,7 @@ content {
     opacity: 1;
 }
 
-footer .contact {
-    text-align: center;
+.contact {
     height: 200px;
     width: 100%
 }
