--- a/resources/style.css
+++ b/resources/style.css
@@ -136,12 +136,15 @@ content {
     justify-content: center;
 }
 
+.card p {
+    margin: 25px 0px;
+}
 .contact {
     height: 200px;
     width: 100%
 }
 
-footer .copyright {
+.copyright {
     text-align: left;
     margin-left: 20px;
 }
